[workspace]
members = [
    "jwt_creator",
    "server",
    "client", 
    "common", 
    "cert_decoder",
    "grpc_reflection"]
resolver = "3"

[profile.release]
opt-level = 3
lto = true              # Full cross-crate LTO for maximum inlining
codegen-units = 1        # Single codegen unit = best optimization (slower compile)
strip = true             # Strip debug symbols from binary
panic = "abort"          # No unwinding overhead — smaller binary, faster panics
overflow-checks = false  # Skip integer overflow checks in release

# For target-native optimizations (AVX2, AES-NI, etc.), build with:
#   RUSTFLAGS="-C target-cpu=native" cargo build --release


