[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
hyper = { version = "1.6.0", features = ["client", "http1", "http2"] }
hyper-rustls = "0.27.5"
tokio = { version = "1.39.2", features = ["macros", "rt-multi-thread"] }
anyhow = "1.0.98"
bytes = "1.10.1"
futures = "0.3.30"
http-body-util = "0.1.3" 
hyper-util = { version = "0.1.11", features = ["tokio","service","client-legacy","http1","http2"] }
tracing ="0.1.41"
tracing-subscriber = "0.3.19"
common = { path = "../common" }
clap = { version = "4.5.40", features = ["derive"] }

[[bin]]
name = "client"
path = "src/mtls_client.rs"