[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
bytes = "1.10.1"
clap = { version = "4.5.40", features = ["derive"] }
common = { path = "../common" }
futures = "0.3.30"
http-body-util = "0.1.3"
hyper = { version = "1.6.0", features = ["client", "http1", "http2"] }
hyper-rustls = { version = "0.27.5", features = ["http1", "http2", "tls12"] }
hyper-util = { version = "0.1.11", features = ["tokio", "service", "client-legacy", "http1", "http2"] }
tokio = { version = "1.39.2", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[[bin]]
name = "client"
path = "src/mtls_client.rs"