[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
bytes = "1.10.1"
clap = { version = "4.5.40", features = ["derive"] }
common = { path = "../common" }
futures = "0.3.30"
http-body-util = "0.1.3"
hyper = { version = "1.6.0", features = ["client", "http1", "http2"] }
hyper-util = { version = "0.1.11", features = ["tokio", "service", "client-legacy", "http1", "http2"] }
quinn = { version = "0.11", features = ["rustls"] }
rustls = { version = "0.23", features = ["ring"] }
tokio = { version = "1.39.2", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

# HTTP/3: Must use the same git rev as the server for compatibility
h3 = { git = "https://github.com/hyperium/h3", rev = "704b37a2e82cf4c8de379ec779dbc2a23bfcb9a1" }
h3-quinn = { git = "https://github.com/hyperium/h3", rev = "704b37a2e82cf4c8de379ec779dbc2a23bfcb9a1" }

[[bin]]
name = "client"
path = "src/mtls_client.rs"
