[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
hyper = { version = "1.6.0", features = ["http1", "http2", "client"] }
hyper-rustls = { version = "0.27", features = ["http1", "http2"] }
hyper-util = { version = "0.1.11", features = ["tokio", "service", "client-legacy", "http1", "http2"] }
jsonwebtoken = "9.3.1"
rustls = "0.23.26"
rustls-pemfile = "2.2.0"
serde = { version = "1.0.219", features = ["derive"] }
tracing = "0.1.41"
webpki-roots = "1.0.1"
