[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = "0.3.30"
hyper = { version = "1.6.0", features = ["http1", "server", "http2", "client"] }
rustls = "0.23.26"
tokio = { version = "1.39.2", features = ["macros", "rt-multi-thread"] }
# for tokio console
# tokio = { version = "1.39.2", features = ["macros", "rt-multi-thread", "tracing"] }
tokio-rustls = "0.26.2"
tower = { version = "0.4.13", features = ["util", "make","limit"] }
hyper-util = { version = "0.1.11", features = ["tokio", "service", "client-legacy", "http1", "http2"] }
bytes = "1.10.1"
http-body-util = "0.1.3"
anyhow = "1.0.98"
local-ip-address = "0.6.5"
tracing = "0.1.41"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.23"
jsonwebtoken = "9.3.1"
pin-project = "1.1.10"
regex = "1.11.1"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
thiserror = "2.0.12"
hyper-rustls = "0.27.7"
rustls-pki-types = "1.12.0"
num_cpus = "1.17.0"
common = { path = "../common" }
# for tokio console only
# console-subscriber = "0.4.1"



[[bin]]
name = "server"
path = "src/server.rs"

[features]
#default = ["boxed_body"]
default = []
boxed_body = []
