[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
asn1-rs = { version = "0.7.1", features = ["bigint"] }
async-compression = { version = "0.4", features = ["tokio", "gzip", "brotli"] }
bytes = "1.10.1"
common = { path = "../common" }
futures = "0.3.30"
futures-util = "0.3"
#h3 = "0.0.8"
#h3-quinn = "0.0.8"
http-body = "1.0.1"
http-body-util = "0.1.3"
hyper = { version = "1.6.0", features = ["http1", "server", "http2", "client"] }
hyper-rustls = { version = "0.27.7", features = ["http1", "http2", "native-tokio"] }
hyper-util = { version = "0.1.11", features = ["tokio", "server-auto", "service", "client-legacy", "http1", "http2"] }
jsonwebtoken = "9.3.1"
local-ip-address = "0.6.5"
matchit = "0.9.1"
num_cpus = "1.17.0"
pem = "3.0.6"
pin-project = "1.1.10"
quinn = { version = "0.11", features = ["rustls"] }
regex = "1.11.1"
rustls = { version = "0.23", features = ["ring"] }
rustls-pki-types = "1.12.0"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
# for tokio console
# tokio = { version = "1.39.2", features = ["macros", "rt-multi-thread", "tracing"] }
tokio = { version = "1.39.2", features = ["macros", "rt-multi-thread", "signal"] }
tokio-rustls = "0.26.2"
tokio-util = { version = "0.7", features = ["io", "codec"] }
toml = "0.8.23"
tower = { version = "0.4.13", features = ["util", "make", "limit"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
x509-parser = "0.18.0"


# Optional/Disabled dependencies
# console-subscriber = "0.4.1" # for tokio console only
# rustls-native-certs = "0.8.3"
# rustls-pemfile = "2.2.0"

# HTTP/3: We MUST use git master for Quinn 0.11 support
h3 = { git = "https://github.com/hyperium/h3", rev = "704b37a2e82cf4c8de379ec779dbc2a23bfcb9a1" }
h3-quinn = { git = "https://github.com/hyperium/h3", rev = "704b37a2e82cf4c8de379ec779dbc2a23bfcb9a1" }



[[bin]]
name = "server"
path = "src/server.rs"
